...
  }

  @override
  Widget build(BuildContext context) => Scaffold(
    appBar: AppBar(
      title: TextField(
        key: const Key('search_field'),
        controller: _controller,
        autofocus: true,
        decoration: const InputDecoration(
          hintText: 'アイテム名 / JAN / ISBN / ラベル',
          border: InputBorder.none,
        ),
...
